fixed header issue on homepage on mobile display by changing hero section image scaling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -806,8 +806,13 @@ footer {
     background-image: url("/hero-image.webp");
     background-size: contain;
     background-repeat: no-repeat;
-    z-index: 0;
 }
+
+    @media (max-width: 801px) {
+        .hero-bg-img {
+            width: 100%;
+        }
+    }
 
     @media (max-width: 865px) {
         .hero-bg-img {
